--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,22 @@
 {
   "compilerOptions": {
+    /* Target environment Node.js modern */
     "target": "ES2020",
-    "module": "CommonJS",
-    "declaration": true,
-    "outDir": "dist",
+    "module": "commonjs",
+    "moduleResolution": "node",
+
+    /* Interop & strictness */
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
     "strict": true,
-    "esModuleInterop": true
+
+    /* Node.js type declarations */
+    "types": ["node"],
+
+    /* Output dir */
+    "outDir": "dist"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "test"]
+  "exclude": ["node_modules", "dist"]
 }
