--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           node-version: 20
           registry-url: "https://registry.npmjs.org"
+      - run: npm ci --include=dev
       - run: npm run build
       - run: npm publish --access public
         env:
