chore: change script and package name

--- a/.npmignore
+++ b/.npmignore
@@ -2,6 +2,7 @@
 src/
 *.ts
 *.tsx
+.env
 
 # Test files
 test/
@@ -39,7 +40,6 @@ docs/
 # Examples
 examples/
 demo/
-dist/
 
 # Coverage
 coverage/
