--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "@logique/logique-log",
-  "version": "1.0.0-rc-0",
-  "description": "Pacakge for debug log with console with flagging and write sql query",
+  "name": "logique-log",
+  "version": "1.0.0-rc-1",
+  "description": "package for debug log with console with flagging and write sql query",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
   },
 	"publishConfig": {
-    "access": "public"
+    "access": "public",
+		"registry": "https://npm.pkg.github.com",
+		"tag": "rc"
   },
   "keywords": [
     "logique",
