--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "logique-log",
+  "name": "@logique/logique-log",
   "version": "1.0.0-rc-2",
   "description": "package for debug log with console with flagging and write sql query",
   "main": "index.js",
