--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "logique-log",
-	"version": "1.0.0-rc-4",
+	"version": "1.0.0",
 	"description": "package for debug log with console with flagging and write sql query",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
